Feature ET-27: Verify Canonical HTTP Authentication Without ERP